<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Claridade Monitor Mobile</string>
    <string name="hello_world">Que bom que você está com a gente! Futuramente aqui o nosso dashboard. Para testar as outras funcionalidades acesse o menu.</string>
    <string name="action_simulations">Simulações</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="title_activity_simulations">Simulações</string>
    <string name="action_settings">Settings</string>
    <string name="database_reset">RESETAR BANCO DE DADOS</string>
    <string name="title_activity_about">Sobre</string>
    <string name="header_current_version">VERSÃO ATUAL</string>
    <string name="header_history">HISTÓRICO</string>
    <string name="action_about">Sobre</string>
    <string name="title_activity_welcome">Bem Vindo!</string>
    <string name="register">REGISTRAR</string>
    <string name="user_reset">RESETAR USUÁRIO ATUAL</string>
    <string name="title_activity_subscriptions">Minhas Assinaturas</string>
    <string name="action_subscriptions">Minhas assinaturas</string>
    <string name="action_dashboard_type">Visualizar por</string>
    <string name="title_activity_issue">Incidente</string>
    <string name="title_activity_new_issue">Novo Incidente</string>
    <string name="action_add_issue">Novo incidente</string>
    <string name="title_activity_comment_list">Comentários</string>
    <string name="action_follow">Seguir</string>
    <string name="action_my_issues">Meus incidentes</string>
    <string name="text_screen_tip_dashboard">Na tela a seguir são exibidos incidentes nos sistemas que você acompanha categorizados por importância (bandeira) e/ou demora na resolução (cronômetro). Os seus sistemas podem ser modificados no menu \'Minhas assinaturas\'.</string>
    <string name="entendi">Entendi</string>
    <string name="screen_tips_configuration">CONFIGURAR DICAS DE TELA</string>
    <string name="text_screen_tip_issues_list">Na tela a seguir as cores denotam criticidade: (preto = crítico, vermelho = muito importante, amarelo = importante e azul = normal) tanto na importância para o negócio (bandeiras) quanto na demora na resolução dos incidentes (cronômetros). Você pode adicionar um novo incidente com o botão \'+\'.</string>
    <string name="text_screen_tip_issue">Na tela a seguir são exibidos os detalhes do incidente. Você pode seguir ou deixar de seguir um incidente (pelo menu) ou inserir ações para a evolução do seu tratamento com o botão \'+\'. É possível também comentar ou apoiar uma ação com o +X.</string>
    <string name="title_activity_screen_tip">Dica</string>

</resources>
