<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="br.com.arndroid.monitormobile.DashboardListActivity">

    <item android:id="@+id/action_dashboard_type"
          android:title="@string/action_dashboard_type"
          android:icon="@drawable/flag_and_clock_action"
          android:showAsAction="ifRoom"
          tools:ignore="AppCompatResource"/>

    <item android:id="@+id/action_my_issues"
          android:title="@string/action_my_issues"
          android:showAsAction="never"
          tools:ignore="AppCompatResource"/>

    <item android:id="@+id/action_subscriptions"
          android:title="@string/action_subscriptions"
          android:showAsAction="never"
          tools:ignore="AppCompatResource"/>

    <item android:id="@+id/action_simulations"
          android:title="@string/action_simulations"
          android:showAsAction="never"
          tools:ignore="AppCompatResource"/>

    <item android:id="@+id/action_about"
        android:title="@string/action_about"
        android:showAsAction="never"
        tools:ignore="AppCompatResource"/>

</menu>
